# nh-config-editor

./: .eslintrc.yml  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  index.html  main_app.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build_release.yml  codeql-analysis.yml  draft_release.yml  pr.yml  publish_release.yml  tests.yml
src/: App.tsx  Events.ts  Main.tsx  Utils.ts  Wrapper.tsx  global.d.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/new_project_template/.github/workflows/: create-release.yml
src-tauri/src/: build_project.rs  commands.rs  main.rs  menus.rs
src/AboutWindow/: AboutWindow.tsx
src/Common/: AppData.ts  AsyncImage.tsx  CenteredSpinner.tsx  ContextMenu.tsx  IconDropDownItem.tsx  KeyboardManager.ts  ModManager.ts  Project.ts  ProjectSettingsSchema.json  Settings.ts  TauriCommands.ts  Utils.ts  common.css
src/MainWindow/: Actions.tsx  Events.ts  MainWindow.tsx  MainWindowBlur.tsx  MainWindowMenuBar.tsx  ProjectCrawler.ts  index.css  main.tsx  main_window.css
src/NewProjectWindow/: NewProjectWindow.tsx
src/RunWindow/: RunWindow.tsx
src/Schemas/: addon_manifest_schema.json  mod_manifest_schema.json
src/SettingsWindow/: SettingsWindow.tsx
src/StartWindow/: RecentProject.tsx  StartWindow.tsx  main.tsx
src/Store/: Hooks.ts  (+4 more)
test/: MainWindow.test.tsx  Setup.ts  StartWindow.test.tsx  Utils.ts  global.d.ts
updates/: generateUpdateFile.js  latest-version.json
(+114 files in other folders)
