[package]
name = "nh-editor"
version = "0.8.0"
description = "An editor for New Horizons planets, systems, and more"
authors = ["Bwc9876"]
license = "MIT"
repository = "https://github.com/Outer-Wilds-New-Horizons/nh-config-editor"
default-run = "nh-editor"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
base64 = "0.21.2"
zip = "0.6.6"
minify = "1.3.0"
walkdir = "2.3.3"
fs_extra = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["clipboard-write-text", "dialog-all", "fs-all", "http-request", "os-all", "path-all", "process-exit", "process-relaunch", "shell-open", "updater", "window-all"] }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
